# 4eq1_solver

./: CMakeLists.txt
src/: main.cpp
src/notation/: operations.cpp  operations.h
src/permutation/: permutation.cpp  permutation.h
